<resources>
    <string name="app_name">Mini Postman</string>
    <string name="history">History</string>
    <string name="home">Home</string>
    <string name="pick_http_type">Pick HTTP type</string>
    <string name="get">GET</string>
    <string name="post">POST</string>
    <string name="headers">Headers</string>
    <string name="add_headers">Add Headers</string>
    <string name="enter_json_body">Enter json body</string>
    <string name="create_request">Create Request</string>
    <string name="request_info">Request Info</string>
    <string name="response_info">Response Info</string>
    <string name="request_result">Request Result</string>
    <string name="all">All</string>
    <string name="succeed">Succeed</string>
    <string name="failed">Failed</string>
    <string name="select_image_to_upload">Select Image to Upload</string>
    <string name="remove_image">Remove Image</string>
</resources>