<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".history.view.HistoryFragment"
    android:focusable="true"
    android:background="?android:colorBackground"
    android:clickable="true">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/history_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/postman_action_bar"
        app:title="@string/history"
        app:navigationIcon="@drawable/baseline_arrow_back_24"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/history_toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:clipToPadding="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <HorizontalScrollView
                android:id="@+id/filter"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <com.google.android.material.button.MaterialButtonToggleGroup
                        android:id="@+id/http_type_toggle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:singleSelection="true"
                        app:selectionRequired="true"
                        app:checkedButton="@id/all_request">

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="?attr/materialButtonOutlinedStyle"
                            android:text="@string/all"
                            android:id="@+id/all_request"
                            android:textAllCaps="false"/>

                        <Button
                            android:id="@+id/get_button"
                            style="?attr/materialButtonOutlinedStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/get"/>

                        <Button
                            android:id="@+id/post_button"
                            style="?attr/materialButtonOutlinedStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/post"/>
                    </com.google.android.material.button.MaterialButtonToggleGroup>

                    <com.google.android.material.button.MaterialButtonToggleGroup
                        android:id="@+id/request_status_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/http_type_toggle"
                        android:layout_marginStart="16dp"
                        app:singleSelection="true"
                        app:selectionRequired="true"
                        app:checkedButton="@id/all_request_status">

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="?attr/materialButtonOutlinedStyle"
                            android:text="@string/all"
                            android:id="@+id/all_request_status"
                            android:textAllCaps="false"/>

                        <Button
                            android:id="@+id/succeed_status"
                            style="?attr/materialButtonOutlinedStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/succeed"/>

                        <Button
                            android:id="@+id/failed_status"
                            style="?attr/materialButtonOutlinedStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/failed"/>
                    </com.google.android.material.button.MaterialButtonToggleGroup>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </HorizontalScrollView>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/filter"
                android:text="Sort by time"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/sort_by_time"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/history_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/sort_by_time"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:nestedScrollingEnabled="false"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>