<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".response.view.ResponseFragment"
    android:background="@color/white"
    android:focusable="true"
    android:clickable="true">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/response_toolbar"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/postman_action_bar"
        app:title="@string/request_result"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        />

    <ScrollView
        android:id="@+id/response_scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/response_toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="16dp"
        android:clipToPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/response_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/request_response_basic_info"
                layout="@layout/request_response_basic_info" />

<!--            Request info title-->
            <TextView
                android:id="@+id/request_info_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:text="@string/request_info"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/request_response_basic_info" />

<!--            Request url-->
            <TextView
                android:id="@+id/request_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autoLink="all"
                android:linksClickable="true"
                app:layout_constraintTop_toBottomOf="@id/request_info_title"
                tools:text="URL: https://dummyjson.com/products/1" />

<!--            Request query-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/request_query_params"
                app:layout_constraintTop_toBottomOf="@id/request_url"
                android:layout_marginTop="8dp"
                />

<!--            Request Header-->
            <TextView
                android:id="@+id/request_headers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/request_query_params"
                android:layout_marginTop="8dp" />

<!--            Body request-->
            <TextView
                android:id="@+id/body_request"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/request_headers"
                android:layout_marginTop="8dp"/>


<!--            Response Info title-->
            <TextView
                android:id="@+id/response_info_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:text="@string/response_info"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/body_request" />

<!--            Response or error-->
            <TextView
                android:id="@+id/response_or_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/response_info_title"/>

<!--            Response Header-->
            <TextView
                android:id="@+id/response_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/response_or_error"
                android:layout_marginTop="8dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>