<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/home_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".home.view.HomeFragment"
    android:background="@color/white"
    android:focusable="true"
    android:clickable="true">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/home_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/postman_action_bar"
        app:title="@string/home"
        app:menu="@menu/history_menu"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/home_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/home_toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/home_scroll"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/create_request"
            android:layout_marginVertical="8dp"
            android:clipToPadding="true">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp">

<!--                Enter url-->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_input_layout_url"
                    app:layout_constraintTop_toTopOf="parent"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/url_edit_text"
                        android:hint="http://"/>
                </com.google.android.material.textfield.TextInputLayout>

<!--                Http types picker-->
                <include layout="@layout/http_layout_picker_item"
                    android:id="@+id/http_type"/>

<!--                Adding Header-->
                <include layout="@layout/adding_header_item_layout"
                    android:id="@+id/adding_header"/>

<!--                Body of Post request-->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/body_of_post_request_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/adding_header"
                    android:layout_marginTop="16dp"
                    android:visibility="gone">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_input_layout_body"
                        app:layout_constraintTop_toTopOf="parent"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                        <com.google.android.material.textfield.TextInputEditText
                            android:inputType="textMultiLine"
                            android:scrollbars="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="top|start"
                            android:id="@+id/body_edit_text"
                            android:hint="@string/enter_json_body"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/create_request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="8dp"
            style="?attr/materialButtonOutlinedStyle"
            android:text="@string/create_request"
            android:textAllCaps="false"/>

        <ProgressBar
            android:visibility="gone"
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>